--- a/src/sass/home/CompactSection.scss
+++ b/src/sass/home/CompactSection.scss
@@ -14,6 +14,10 @@
     }
   }
 
+  p {
+    z-index: 30;
+  }
+
   p + p { margin-top: 2em; }
 
   .bubble {
@@ -69,6 +73,7 @@
 
   h2 {
     margin-top: 1.5em;
+    z-index: 30;
   }
 
 
@@ -78,8 +83,8 @@
     position: absolute;
     top: 10rem;
     left: -#{$bubble-width + 1rem};
-    background-color: $palette-red;
-    border-radius: 50%;
+    background: url('/assets/images/best-practices-background.svg');
+    background-repeat: no-repeat;
     color: white;
     .text {
       left: 66%;
@@ -91,12 +96,12 @@
     height: $bubble-width * 2;
     position: absolute;
     top: 60rem;
-    right: -#{$bubble-width + 1rem};
+    right: -#{$bubble-width - 15rem};
     color: white;
-    border-radius: 50%;
-    background-color: $palette-green;
+    background: url('/assets/images/housing-background.svg');
+    background-repeat: no-repeat;
     .text {
-      right: 66%;
+      right: 40%;
     }
   }
 
