--- a/src/sass/partials/base.scss
+++ b/src/sass/partials/base.scss
@@ -8,9 +8,19 @@ body {
   padding: 0;
 
   color: $color_font-dark;
+  font-size: 16px;
   font-family: $font_family-primary;
 }
 
 p {
   font-family: $font_family-secondary;;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1440px;
 }
