--- a/src/sass/partials/vars.scss
+++ b/src/sass/partials/vars.scss
@@ -24,6 +24,8 @@ $font_family-primary: 'Roboto', sans-serif;
 $font_family-secondary: 'gastromond', serif;
 
 $font_size-15px: .9375rem;
+$font_size-22px: 1.375rem;
+$font_size-75px: 4.6875rem;
 
 
 // Breakpoints
