--- a/src/sass/home/IntroSection.scss
+++ b/src/sass/home/IntroSection.scss
@@ -1,2 +1,54 @@
 .component.IntroSection {
+  $_layer-back: 1;
+  
+  h1 { 
+    z-index: $_layer-back + 1;
+
+    max-width: 65%;
+    margin-bottom: 0;
+
+    font-size: $font_size-75px;
+
+  }
+
+  p {
+    z-index: $_layer-back + 1;
+    max-width: 55%; 
+    margin-top: 0; 
+
+    font-size: $font_size-22px + .19rem;
+  }
+
+  .header-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: $_layer-back;
+
+    width: 100%;
+    max-width: 41%;
+
+    img { 
+      z-index: $_layer-back + 1;
+      width: 100%;
+      height: 100%;
+    }
+
+    &:after {
+      $_height: 26px;
+      content: '';
+
+      position: absolute;
+      left: 9vw;
+      bottom: -$_height / 2;
+      z-index: 0;
+      display: block;
+
+      width: 100%;
+      height: $_height;
+
+      background: $color_palette-yellow;
+    }
+  }
+
 }
