Restyle TaskForceSection and Member

--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -17,7 +17,7 @@
     margin: 0;
 
     color: $color_font-dark;
-    font-size: $font_size-15px;
+    font-size: $font_size-base;
     font-weight: 100;
     text-transform: uppercase;
 
@@ -57,7 +57,7 @@
 
     a {
       color: $color_font-dark;
-      font-size: $font_size-15px; 
+      font-size: $font_size-base; 
       font-weight: 600;
 
       transition: color .12s;
