--- a/src/sass/partials/vars.scss
+++ b/src/sass/partials/vars.scss
@@ -23,9 +23,11 @@ $color_palette-blue--dark: mix(black, $color_palette-blue, 15);
 $font_family-primary: 'Roboto', sans-serif;
 $font_family-secondary: 'gastromond', serif;
 
-$font_size-15px: .9375rem;
-$font_size-22px: 1.375rem;
-$font_size-75px: 4.6875rem;
+$font_size-base: 16px;
+$font_size-small: .6875rem; // 11px
+$font_size-medium: 1.25rem; // 20px
+$font_size-large: 3.4375rem; // 55px
+$font_size-xlarge: 4.6875rem; // 75px
 
 
 // Breakpoints
