Restyle CompactSection. Add universal footer.

--- a/src/sass/home/TaskForceSection.scss
+++ b/src/sass/home/TaskForceSection.scss
@@ -5,7 +5,7 @@
     flex-wrap: wrap;
     justify-content: center;
 
-    margin: 1rem auto 0;
+    margin: 3rem auto 4rem;
     max-width: 80em;
 
     @media (min-width: 1266px) {
