--- a/src/sass/home/IntroSection.scss
+++ b/src/sass/home/IntroSection.scss
@@ -2,6 +2,8 @@
   $_layer-back: 1;
 
   margin-bottom: 8%;
+
+  @include media(small) { margin-bottom: 16%; }
   
   h1 { 
     z-index: $_layer-back + 1;
@@ -10,6 +12,14 @@
     margin-bottom: 0;
 
     font-size: $font_size-xlarge;
+
+    @include media(medium) { font-size: $font_size-large; }
+    @include media(small) { 
+      max-width: 80%;
+
+      font-size: $font_size-large - $font_mod-large; 
+    }
+    @include media(x-small) { max-width: 100%; }
   }
 
   p {
@@ -18,6 +28,12 @@
     margin-top: 0; 
 
     font-size: $font_size-medium + .24rem;
+
+    @include media(small) { 
+      max-width: 100%;
+
+      font-size: $font_size-base--rem + $font_mod-small; 
+    }
   }
 
   .header-image {
@@ -29,10 +45,15 @@
     width: 100%;
     max-width: 41%;
 
+    @include media(large) { max-width: 50%; }
+    @include media(small) { bottom: -10%; top: initial;}
+
     img { 
       z-index: $_layer-back + 1;
       width: 100%;
       height: 100%;
+
+      @include media(small) { visibility: hidden; }
     }
 
     &:after {
@@ -49,6 +70,11 @@
       height: $_height;
 
       background: $color_palette-yellow;
+
+      @include media(small) {
+        bottom: -(($_height / 2) * .35);
+        height: $_height / 2; 
+      }
     }
   }
 
