--- a/src/sass/home/CompactSection.scss
+++ b/src/sass/home/CompactSection.scss
@@ -12,10 +12,9 @@
 
     &:nth-of-type(2) {
       &:before {
-        @extend ._grid-bg; 
         @extend ._pseudo;
+        @extend ._grid-bg; 
 
-        position: absolute;
         top: -30%;
         left: 0;
 
@@ -31,10 +30,9 @@
       }
 
       &:before {
-        @extend ._grid-bg;
         @extend ._pseudo;
+        @extend ._grid-bg;
 
-        position: absolute;
         right: 0;
         top: -10%;
 
@@ -44,15 +42,9 @@
 
       &:after {
         @extend ._pseudo;
-
-        position: absolute;
-        top: 0;
-        z-index: -2;
+        @extend ._partial-bg;
 
         height: 3%;
-        width: 100%;
-
-        background: $color_bg-medium;
       } 
     }
   }
