--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,5 +5,6 @@
 @import 'Footer';
 
 @import 'home/all';
+@import 'guiding-principles/all';
 //@import 'best-practices/all';
 //@import 'story/all';
