--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -17,6 +17,13 @@ body {
 main { padding-bottom: 180px; }
 
 h1 { 
+  &.huge { 
+    font-size: $font_size-xlarge; 
+
+    @include media(medium) { font-size: $font_size-large; }
+    @include media(small) { font-size: $font_size-large - $font_mod-large; }
+  }
+
   &:not(.unstyled) {
     font-family: $font_family-secondary; 
     font-weight: 400;
@@ -24,7 +31,7 @@ h1 {
 }
 
 h3 { 
-  font-weight: 500;
+  font-weight: 400;
   font-size: $font_size-medium;
   font-family: $font_family-primary;
   text-transform: uppercase;
