--- a/src/sass/partials/_extends.scss
+++ b/src/sass/partials/_extends.scss
@@ -29,7 +29,20 @@
 }
 
 ._grid-bg {
+  position: absolute;
+
   background-image: url('/assets/images/grid-pattern.svg');
   background-size: 12px;
   background-repeat: repeat;
+}
+
+._partial-bg {
+  position: absolute;
+  top: 0;
+  z-index: -2;
+
+  height: 50%;
+  width: 100%;
+
+  background: $color_bg-medium;
 }
