--- a/src/sass/partials/_vars.scss
+++ b/src/sass/partials/_vars.scss
@@ -34,6 +34,10 @@ $font_size-medium: 1.25rem; // 20px
 $font_size-large: 3.4375rem; // 55px
 $font_size-xlarge: 4.6875rem; // 75px
 
+$font_spacing-small: .02em;
+$font_spacing-medium: .05em;
+$font_spacing-large: .10em;
+
 $font_mod-small: .2rem;
 $font_mod-large: 1rem;
 
