--- a/src/sass/guiding-principles/ImagePrinciple.scss
+++ b/src/sass/guiding-principles/ImagePrinciple.scss
@@ -1,12 +1,7 @@
 .component.ImagePrinciple {
   display: flex;
 
-  img {
-    flex: 1 0 25%;
-
-    max-width: 100%;
-    max-height: 100%;
-  }
+  img { flex: 1 0 25%; }
 
   .Principle {
     flex: 1 0 70%; 
