--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,5 +6,5 @@
 
 @import 'home/all';
 @import 'guiding-principles/all';
-//@import 'best-practices/all';
+@import 'best-practices/all';
 //@import 'story/all';
