--- a/src/sass/partials/_vars.scss
+++ b/src/sass/partials/_vars.scss
@@ -57,3 +57,8 @@ $desktop: "(min-width: 1024px)";
 $phone: "(max-width: 768px)";
 
 $layout-tablet: "(max-width: 70rem)";
+
+
+// Element specific
+
+$topic_margin: .4em;
