--- a/src/sass/story/Slide.scss
+++ b/src/sass/story/Slide.scss
@@ -1,40 +1,65 @@
 .component.Slide {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  background-size: cover;
-  background-position: center;
-  width: 100vw;
-  height: 100vh;
+  display: none;
+
+  width: 100%;
+  height: 100%;
+  padding-top: 150px;
+
+  color: $color_font-light;
   text-align: center;
 
-  h1 {
-    background: white;
-    display: inline-block;
-  }
+  background: $color_bg-dark;
 
-  .slide-content { text-align: left; }
+  &.active { display: block; }
 
-  .slide-controls {
+  .image-wrapper {
     position: absolute;
+    top: 0;
     left: 0;
-    right: 0;
-    bottom: $standard-padding;
+    z-index: 1;
+   
+    width: 100%;
+    height: 100%;
 
-    width: calc(100% - #{$standard-padding * 2});
+    overflow: hidden;
+    text-align: center;
+  }
+
+  .container { text-align: center; }
+
+  img {
+    @extend ._vertical-center;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    min-width: 100%;
+    min-height: 100%;
+    margin: auto;
+  }
+
+  h1 { 
+    font-size: $font_size-large; 
+    margin-bottom: 5px;
+  }
+
+  .slide-content { 
+    display: inline-block;
     margin: 0 auto;
+
+    font-size: $font_size-medium;
+    letter-spacing: $font_spacing-small;
+    text-align: left; 
   }
 
-  &[data-slide="0"] {
-    background-image: url("/assets/images/hartford-ct.jpg");
-  }
+  .slide-credits {
+    position: absolute;
+    bottom: 30px;
+    right: 80px;
 
-  &[data-slide="1"] {
-    background-image: url("/assets/images/boston.jpg");
-  }
-
-  &[data-slide="2"] {
-    background-image: url("/assets/images/new-york-city.jpg");
+    color: $color_font-light;
+    font-size: $font_size-small;
+    font-weight: 500;
+    line-height: $font_size-small * 1.4;
   }
 }
