--- a/src/sass/story/Slide.scss
+++ b/src/sass/story/Slide.scss
@@ -16,7 +16,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
    
     width: 100%;
     height: 100%;
@@ -25,11 +24,13 @@
     text-align: center;
   }
 
-  .container { text-align: center; }
+  .container { 
+    height: 100%;
+    text-align: center; 
+  }
 
   img {
     @extend ._vertical-center;
-    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
 
@@ -44,12 +45,20 @@
   }
 
   .slide-content { 
+    @extend ._vertical-center;
+    top: 40%;
     display: inline-block;
-    margin: 0 auto;
 
-    font-size: $font_size-medium;
+    max-width: 60%;
+    margin: 0 auto;
+    padding: 12px 20px;
+
+    font-size: $font_size-large - $font_mod-small;
     letter-spacing: $font_spacing-small;
+    line-height: $font_size-large + $font_mod-large;
     text-align: left; 
+
+    background: rgba($color_bg-dark, .7);
   }
 
   .slide-credits {
@@ -61,5 +70,19 @@
     font-size: $font_size-small;
     font-weight: 500;
     line-height: $font_size-small * 1.4;
+  }
+
+  &:nth-of-type(1) {
+    .slide-content { 
+      position: relative;
+      top: initial;
+      transform: initial;
+
+      font-size: $font_size-medium;
+      line-height: initial;
+      letter-spacing: $font_spacing-small;
+
+      background: none; 
+    }
   }
 }
