--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -13,6 +13,8 @@
     a:hover { color: $color_palette-blue; }
   }
 
+  &.shadowed { text-shadow: 1px 2px rgba($color_font-dark, .3); }
+
   @include media(medium) { 
     display: block; 
 
