--- a/src/sass/story/Slide.scss
+++ b/src/sass/story/Slide.scss
@@ -53,12 +53,13 @@
     margin: 0 auto;
     padding: 12px 20px;
 
-    font-size: $font_size-large - $font_mod-small;
+    font-size: $font_size-large - ($font_mod-small * 1.55);
+    font-weight: 300;
     letter-spacing: $font_spacing-small;
     line-height: $font_size-large + $font_mod-large;
     text-align: left; 
 
-    background: rgba($color_bg-dark, .7);
+    background: rgba($color_bg-dark--dark, .74);
   }
 
   .slide-credits {
