--- a/src/sass/best-practices/BestPractice.scss
+++ b/src/sass/best-practices/BestPractice.scss
@@ -3,48 +3,26 @@
   display: flex;
 
   min-height: 15rem;
-  border: 0.3em solid;
-
-  &:nth-of-type(3n+1) {
-    color: $color_palette-blue;
-    border-color: $color_palette-blue; 
-
-    .best-practice-image { background-image: url('/assets/images/blue-best-practice.jpg'); }
-  }
-
-  &:nth-of-type(3n+2) {
-    color: $color_palette-orange; 
-    border-color: $color_palette-orange;
-
-    .best-practice-image { background-image: url('/assets/images/red-best-practice.jpg'); }
-  }
-
-  &:nth-of-type(3n) {
-    color: $color_palette-green; 
-    border-color: $color_palette-green;
-
-    .best-practice-image { background-image: url('/assets/images/green-best-practice.jpg'); }
-  }
+  border: 0.3em solid #98c3d1;
 
   .best-practice-description {
     flex: 1 0 70%;
     padding: 1em;
 
-    h4 { 
+    color: #568095;
+
+    h4 {
       margin-bottom: 0;
 
       font-size: 1.2rem;
-      text-transform: uppercase; 
+      text-transform: uppercase;
     }
   }
 
   .best-practice-image {
     flex: 1 0 30%;
-    width: 100%;
 
-    background-size: cover; 
-    background-position: center;
-    background-repeat: no-repeat;
+    width: 100%;
   }
 
 }
