--- a/src/sass/story/Slide.scss
+++ b/src/sass/story/Slide.scss
@@ -16,50 +16,36 @@
     position: absolute;
     top: 0;
     left: 0;
-   
+
     width: 100%;
     height: 100%;
 
     overflow: hidden;
     text-align: center;
+
+    img {
+      @extend ._vertical-center;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      min-width: 100%;
+      min-height: 100%;
+      margin: auto;
+    }
   }
 
-  .container { 
+  .container {
     height: 100%;
-    text-align: center; 
+    text-align: center;
   }
 
-  img {
-    @extend ._vertical-center;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    min-width: 100%;
-    min-height: 100%;
-    margin: auto;
-  }
-
-  h1 { 
-    font-size: $font_size-large; 
-    margin-bottom: 5px;
-  }
-
-  .slide-content { 
+  .slide-content {
     @extend ._vertical-center;
     top: 40%;
     display: inline-block;
 
     max-width: 60%;
     margin: 0 auto;
-    padding: 12px 20px;
-
-    font-size: $font_size-large - ($font_mod-small * 1.55);
-    font-weight: 300;
-    letter-spacing: $font_spacing-small;
-    line-height: $font_size-large + $font_mod-large;
-    text-align: left; 
-
-    background: rgba($color_bg-dark--dark, .74);
   }
 
   .slide-credits {
@@ -73,17 +59,31 @@
     line-height: $font_size-small * 1.4;
   }
 
+  .content-block {
+    color: $color_font-light;
+    font-size: $font_size-medium + $font_mod-large;
+
+    &.size-large { font-size: $font-size-large + $font_mod-large;}
+    &.size-small { font-size: $font_size-base--rem + $font_mod-large; }
+    &.style-italic { font-style: italic; }
+    &.weight-bold { font-weight: 700; }
+    &.weight-light { font-weight: 200; }
+    &.color-blue { color: $color_font-dark; }
+    &.color-yellow { color: $color_palette-yellow; }
+    &.text-background { background: $color_bg-dark; }
+  }
+
   &:nth-of-type(1) {
-    .slide-content { 
+    .slide-content {
       position: relative;
       top: initial;
       transform: initial;
 
-      font-size: $font_size-medium;
-      line-height: initial;
-      letter-spacing: $font_spacing-small;
-
-      background: none; 
+      .content-block:first-of-type { font-family: $font_family-secondary; }
     }
+  }
+
+  &:nth-of-type(2) {
+
   }
 }
