Style story slides

--- a/src/sass/partials/_vars.scss
+++ b/src/sass/partials/_vars.scss
@@ -40,6 +40,7 @@ $font_spacing-medium: .05em;
 $font_spacing-large: .10em;
 
 $font_mod-small: .2rem;
+$font_mod-medium: .5rem;
 $font_mod-large: 1rem;
 
 
