--- a/src/sass/story/Slide.scss
+++ b/src/sass/story/Slide.scss
@@ -8,7 +8,7 @@
   color: $color_font-light;
   text-align: center;
 
-  background: $color_bg-dark;
+  background: $color_bg-light;
 
   &.active { display: block; }
 
@@ -36,15 +36,17 @@
 
   .container {
     height: 100%;
-    text-align: center;
+
+    text-align: left;
   }
 
   .slide-content {
-    @extend ._vertical-center;
-    top: 40%;
+    position: absolute;
     display: inline-block;
 
-    max-width: 60%;
+    width: 75%;
+    max-width: 960px;
+
     margin: 0 auto;
   }
 
@@ -59,31 +61,225 @@
     line-height: $font_size-small * 1.4;
   }
 
-  .content-block {
-    color: $color_font-light;
-    font-size: $font_size-medium + $font_mod-large;
+  &.blue { background: $color_bg-dark; }
+  &.yellow { background: $color_palette-yellow; }
 
-    &.size-large { font-size: $font-size-large + $font_mod-large;}
-    &.size-small { font-size: $font_size-base--rem + $font_mod-large; }
+  .content-block {
+    margin: 10px auto;
+
+    color: $color_font-light;
+    font-size: $font_size-medium + $font_mod-small;
+    text-align: left;
+
+    &.size-large { font-size: $font_size-large + $font_mod-small; }
+    &.size-small { font-size: $font_size-base--rem + $font_mod-small; }
     &.style-italic { font-style: italic; }
-    &.weight-bold { font-weight: 700; }
-    &.weight-light { font-weight: 200; }
+    &.weight-bold { font-weight: 800; }
+    &.weight-light {
+      letter-spacing: 1.5px;
+      font-weight: 200;
+    }
     &.color-blue { color: $color_font-dark; }
     &.color-yellow { color: $color_palette-yellow; }
-    &.text-background { background: $color_bg-dark; }
+    &.text-background span {
+      display: inline-block;
+
+      padding: $font_size-small ($font_size-medium + $font_mod-large);
+
+      background: $color_bg-dark;
+    }
   }
 
   &:nth-of-type(1) {
     .slide-content {
       position: relative;
-      top: initial;
+      top: $font_size-small;
       transform: initial;
 
-      .content-block:first-of-type { font-family: $font_family-secondary; }
+      .content-block:first-of-type {
+        font-family: $font_family-secondary;
+        letter-spacing: 3px;
+      }
     }
   }
 
   &:nth-of-type(2) {
+    .slide-content { bottom: 10%; }
+  }
 
+  &:nth-of-type(3), &:nth-of-type(7) {
+    .slide-content {
+      width: 35%;
+      max-width: 400px;
+      right: 0;
+    }
+
+    .content-block { margin: 24px auto; }
+  }
+
+  &:nth-of-type(4), &:nth-of-type(5) {
+    .slide-content { top: 40%; }
+  }
+
+  &:nth-of-type(6) {
+    .slide-content {
+      width: 40%;
+      right: 0;
+      bottom: 10%;
+    }
+  }
+
+  &:nth-of-type(8) {
+    .container { text-align: center; }
+
+    .slide-content {
+      position: relative;
+      width: 65%;
+      text-align: left;
+      margin: 0 auto;
+    }
+
+    .content-block:nth-of-type(2) { display: inline-block; line-height: $font_size-medium; margin-right: $font_size-base; }
+    .content-block:last-of-type { display: inline-block; }
+  }
+
+  &:nth-of-type(9) {
+    .slide-content {
+      width: 60%;
+      max-width: 900px;
+      right: 0;
+      bottom: 10%;
+    }
+  }
+
+  &:nth-of-type(10), &:nth-of-type(11) {
+    .slide-content { top: 60%; }
+  }
+
+  &:nth-of-type(12) {
+    .slide-content { right: 0; }
+
+    .content-block {
+      text-align: right;
+    }
+  }
+
+  &:nth-of-type(13),
+  &:nth-of-type(15),
+  &:nth-of-type(16),
+  &:nth-of-type(18),
+  &:nth-of-type(19),
+  &:nth-of-type(23),
+  &:nth-of-type(24),
+  &:nth-of-type(26) {
+    .slide-content {
+      @extend ._vertical-center;
+      top: 40%;
+      width: 50%;
+      max-width: 650px;
+    }
+
+    .content-block { text-align: center; }
+  }
+
+  a {
+    text-decoration: underline;
+    &:hover { opacity: .8; }
+  }
+
+  &:nth-of-type(14) {
+    .slide-content {
+      bottom: 10%;
+      left: 10%;
+
+      width: 50%;
+      max-width: 600px;
+    }
+  }
+
+  &:nth-of-type(16) {
+    .content-block:first-of-type { left: $font_size-large; }
+  }
+
+  &:nth-of-type(17) {
+    .slide-content {
+      top: 15%;
+      left: 5%;
+
+      width: 35%;
+    }
+
+    .content-block { text-align: center; }
+  }
+
+  &:nth-of-type(19) {
+    .slide-content { width: 30%; }
+  }
+
+  &:nth-of-type(20) {
+    .slide-content { width: 55%; }
+  }
+
+  &:nth-of-type(21) {
+    .slide-content { width: 55%; }
+    .content-block:first-of-type { margin-bottom: $font_size-medium + $font_mod-small; }
+  }
+
+  &:nth-of-type(22) {
+    .slide-content {
+      @extend ._vertical-center;
+      top: 40%;
+      max-width: 1050px;
+    }
+  }
+
+  &:nth-of-type(23) {
+    .slide-content { width: 40%; }
+    .content-block { text-align: left; }
+  }
+
+  &:nth-of-type(24) {
+    .slide-content { width: 40%; }
+  }
+
+  &:nth-of-type(25) {
+    .container { text-align: center; }
+
+    .slide-content {
+      position: relative;
+
+      width: 60%;
+      margin: 0 auto;
+
+      text-align: left;
+    }
+  }
+
+  &:nth-of-type(26) {
+    .slide-content {
+      width: 90%;
+      max-width: 1050px;
+    }
+    .content-block { text-align: left; }
+  }
+
+  &:nth-of-type(27),
+  &:nth-of-type(28),
+  &:nth-of-type(29),
+  &:nth-of-type(30),
+  &:nth-of-type(31) {
+    .slide-content {
+      top: 10%;
+      left: 15%;
+    }
+  }
+
+  &:nth-of-type(32) {
+    .container { text-align: center; }
+    .slide-content {
+      @extend ._vertical-center;
+      top: 35%;
+    }
+    .content-block { text-align: center; }
   }
 }
