--- a/src/sass/story/Story.scss
+++ b/src/sass/story/Story.scss
@@ -14,7 +14,7 @@
     position: absolute;
     left: 0;
     right: 0;
-    z-index: 1; 
+    z-index: 1;
 
     margin: 0 auto;
   }
@@ -24,7 +24,7 @@
     $_control-size: 65px;
     $_arrow-size: $_control-size - 45px;
     $_line-thickness: 3px;
-    @extend ._vertical-center; 
+    @extend ._vertical-center;
 
     z-index: 8;
 
@@ -41,12 +41,12 @@
     transition: opacity .18s;
 
     &:hover {
-      opacity: 1; 
+      opacity: 1;
       transition: opacity .18s;
     }
 
     &:before {
-      @extend ._pseudo; 
+      @extend ._pseudo;
       @extend ._vertical-center;
       top: 42%;
 
@@ -58,7 +58,7 @@
     }
 
     &:first-of-type {
-      left: $_window-pad; 
+      left: $_window-pad;
 
       &:before {
         left: 50%;
@@ -69,22 +69,27 @@
     }
 
     &:last-of-type {
-      left: initial; 
+      left: initial;
       right: $_window-pad;
 
-      &:before { 
+      &:before {
         left: initial;
         right: 52%;
         border-top: $_line-thickness solid $color_font-light;
         border-right: $_line-thickness solid $color_font-light;
-        transform: rotate(45deg) translateY(-50%); 
+        transform: rotate(45deg) translateY(-50%);
       }
     }
 
-    &.disabled { 
+    &.disabled {
       opacity: 0;
       cursor: normal;
       transition: opacity .25s;
+    }
+
+    &.dark {
+      border-color: $color_font-dark;
+      &:before { border-color: $color_font-dark; }
     }
   }
 }
