--- a/src/sass/story/Slide.scss
+++ b/src/sass/story/Slide.scss
@@ -28,6 +28,8 @@
       left: 50%;
       transform: translate(-50%, -50%);
 
+      max-width: min-content;
+      max-height: 100%;
       min-width: 100%;
       min-height: 100%;
       margin: auto;
