--- a/src/sass/story/Slide.scss
+++ b/src/sass/story/Slide.scss
@@ -12,7 +12,7 @@
 
   &.active { display: block; }
 
-  .image-wrapper {
+  .image {
     position: absolute;
     top: 0;
     left: 0;
@@ -20,20 +20,13 @@
     width: 100%;
     height: 100%;
 
+    background-position: center;
+    background-size: cover;
+
     overflow: hidden;
     text-align: center;
 
-    img {
-      @extend ._vertical-center;
-      left: 50%;
-      transform: translate(-50%, -50%);
-
-      max-width: min-content;
-      max-height: 100%;
-      min-width: 100%;
-      min-height: 100%;
-      margin: auto;
-    }
+    img { display: none; }
   }
 
   .container {
