--- a/src/sass/story/Slide.scss
+++ b/src/sass/story/Slide.scss
@@ -45,6 +45,12 @@
     margin: 0 auto;
   }
 
+  .slide-image {
+    max-width: 100%;
+    max-height: 70%;
+    margin-top: 5%;
+  }
+
   .slide-credits {
     position: absolute;
     bottom: 30px;
