--- a/src/sass/story/Slide.scss
+++ b/src/sass/story/Slide.scss
@@ -31,6 +31,7 @@
 
   .container {
     height: 100%;
+    width: 81%;
 
     text-align: left;
   }
@@ -159,7 +160,10 @@
   }
 
   &:nth-of-type(12) {
-    .slide-content { right: 0; }
+    .slide-content {
+      top: 45px;
+      right: 0;
+    }
 
     .content-block {
       text-align: right;
