--- a/src/sass/story/Slide.scss
+++ b/src/sass/story/Slide.scss
@@ -110,11 +110,35 @@
     .slide-content { bottom: 10%; }
   }
 
-  &:nth-of-type(3), &:nth-of-type(7) {
+  &:nth-of-type(3), &:nth-of-type(7), &:nth-of-type(17)  {
     .slide-content {
       width: 35%;
       max-width: 400px;
       right: 0;
+    }
+
+    .content-block { margin: 24px auto; }
+  }
+
+  &:nth-of-type(4), &:nth-of-type(5) {
+    .slide-content { top: 40%; }
+  }
+
+  &:nth-of-type(3), &:nth-of-type(7), &:nth-of-type(16)  {
+    .slide-content {
+      width: 35%;
+      max-width: 400px;
+      right: 0;
+    }
+
+    .content-block { margin: 24px auto; }
+  }
+
+  &:nth-of-type(14)  {
+    .slide-content {
+      width: 35%;
+      max-width: 400px;
+      top: 15%;
     }
 
     .content-block { margin: 24px auto; }
@@ -171,13 +195,13 @@
   }
 
   &:nth-of-type(13),
-  &:nth-of-type(15),
   &:nth-of-type(16),
   &:nth-of-type(18),
-  &:nth-of-type(19),
-  &:nth-of-type(23),
-  &:nth-of-type(24),
-  &:nth-of-type(26) {
+  &:nth-of-type(20),
+  &:nth-of-type(21),
+  &:nth-of-type(25),
+  &:nth-of-type(26),
+  &:nth-of-type(28) {
     .slide-content {
       @extend ._vertical-center;
       top: 40%;
@@ -193,7 +217,7 @@
     &:hover { opacity: .8; }
   }
 
-  &:nth-of-type(14) {
+  &:nth-of-type(15) {
     .slide-content {
       bottom: 10%;
       left: 10%;
@@ -203,11 +227,11 @@
     }
   }
 
-  &:nth-of-type(16) {
+  &:nth-of-type(18) {
     .content-block:first-of-type { left: $font_size-large; }
   }
 
-  &:nth-of-type(17) {
+  &:nth-of-type(19) {
     .slide-content {
       top: 15%;
       left: 5%;
@@ -218,20 +242,20 @@
     .content-block { text-align: center; }
   }
 
-  &:nth-of-type(19) {
+  &:nth-of-type(21) {
     .slide-content { width: 30%; }
   }
 
-  &:nth-of-type(20) {
+  &:nth-of-type(22) {
     .slide-content { width: 55%; }
   }
 
-  &:nth-of-type(21) {
+  &:nth-of-type(23) {
     .slide-content { width: 55%; }
     .content-block:first-of-type { margin-bottom: $font_size-medium + $font_mod-small; }
   }
 
-  &:nth-of-type(22) {
+  &:nth-of-type(24) {
     .slide-content {
       @extend ._vertical-center;
       top: 40%;
@@ -239,16 +263,16 @@
     }
   }
 
-  &:nth-of-type(23) {
+  &:nth-of-type(25) {
     .slide-content { width: 40%; }
     .content-block { text-align: left; }
   }
 
-  &:nth-of-type(24) {
+  &:nth-of-type(26) {
     .slide-content { width: 40%; }
   }
 
-  &:nth-of-type(25) {
+  &:nth-of-type(27) {
     .container { text-align: center; }
 
     .slide-content {
@@ -261,7 +285,7 @@
     }
   }
 
-  &:nth-of-type(26) {
+  &:nth-of-type(28) {
     .slide-content {
       width: 90%;
       max-width: 1050px;
@@ -269,18 +293,18 @@
     .content-block { text-align: left; }
   }
 
-  &:nth-of-type(27),
-  &:nth-of-type(28),
   &:nth-of-type(29),
   &:nth-of-type(30),
-  &:nth-of-type(31) {
+  &:nth-of-type(31),
+  &:nth-of-type(32),
+  &:nth-of-type(33) {
     .slide-content {
       top: 10%;
       left: 15%;
     }
   }
 
-  &:nth-of-type(32) {
+  &:nth-of-type(34) {
     .container { text-align: center; }
     .slide-content {
       @extend ._vertical-center;
