--- a/src/sass/partials/_vars.scss
+++ b/src/sass/partials/_vars.scss
@@ -17,6 +17,8 @@ $color_palette-skyblue: #98C3D1;
 $color_palette-green: #B5D4A4;
 $color_palette-yellow: #E7C55B;
 
+$color_palette-orange--dark: mix(black, $color_palette-orange, 15);
+
 $color_palette-yellow--light: #F8DA71;
 
 $color_palette-blue--light: mix(white, $color_palette-blue, 10);
