--- a/src/sass/home/CompactSection.scss
+++ b/src/sass/home/CompactSection.scss
@@ -1,15 +1,8 @@
 .component.CompactSection {
+
   h3 { margin-bottom: 0; }
 
   .sub-section {
-    &:nth-of-type(2n)  {
-      background: $color_bg-medium;
-
-      .columned { flex-direction: row-reverse; }
-    }
-
-    &:first-of-type { z-index: 2; }
-
     &:nth-of-type(2) {
       &:before {
         @extend ._pseudo;
@@ -28,99 +21,15 @@
         padding-top: 0;
         padding-bottom: 0;
       }
-
-      &:before {
-        @extend ._pseudo;
-        @extend ._grid-bg;
-
-        right: 0;
-        top: -10%;
-
-        width: 50%;
-        height: 50%;
-      }
-
-      &:after {
-        @extend ._pseudo;
-        @extend ._partial-bg;
-
-        height: 3%;
-      }
     }
   }
 
-  .columned {
-    display: flex;
-
-    padding: 65px 0;
-
-    @include media(small) { display: block; }
-  }
-
-  p {
-    margin: auto;
-    padding: 65px 75px;
-    vertical-align: middle;
-
-    font-size: $font_size-medium;
-    line-height: calc(#{$font_size-medium} + 12px);
-
-    @include media(small) { padding: 50px 0; }
-
-    a {
-      color: $color_font-dark;
-
-      background: $color_palette-yellow--light;
-      transition: background .18s;
-
-      &:hover {
-        background: $color_palette-yellow;
-        transition: background .18s;
-      }
-    }
-  }
-
-  .box-link {
-    display: block;
-
-    height: 100%;
-
-    @include media(small) { display: none; }
-
-    span {
-      left: 0;
-      transition: left .2s;
-    }
-
-    &:hover {
-      span {
-        left: 5px;
-        transition: left .2s;
-      }
-    }
-  }
-
-  .box-content {
-    @extend ._vertical-center;
-
-    width: 66.66%;
-    margin: 0 auto;
-
-    color: $color_font-dark;
-
-    & > * { display: block; }
-
-    span.large {
-      font-size: $font_size-large;
-      font-family: $font_family-secondary;
-    }
-
-    span.small { font-size: $font_size-medium; }
-  }
+  .columned { padding: 65px 0; }
 
   .signatures {
     margin-top: 35px;
     padding: 0 75px;
+
     img {
       width: 16.66%;
 
