--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -1,4 +1,4 @@
-* { 
+* {
   position: relative;
   box-sizing: border-box;
 }
@@ -16,11 +16,11 @@ body {
 
 main { padding-bottom: 180px; }
 
-h1 { 
+h1 {
   font-weight: 400;
 
-  &.huge { 
-    font-size: $font_size-xlarge; 
+  &.huge {
+    font-size: $font_size-xlarge;
 
     @include media(medium) { font-size: $font_size-large; }
     @include media(small) { font-size: $font_size-large - $font_mod-large; }
@@ -29,7 +29,7 @@ h1 {
   &:not(.unstyled) { font-family: $font_family-secondary; }
 }
 
-h3 { 
+h3 {
   font-weight: 500;
   font-size: $font_size-medium;
   font-family: $font_family-primary;
@@ -42,7 +42,7 @@ h3 {
     &:after {
       content: '';
       display: inline-block;
-      vertical-align: middle; 
+      vertical-align: middle;
       top: -2px;
 
       width: 140px;
@@ -51,7 +51,7 @@ h3 {
       border-bottom: 1px solid $color_bg-dark;
 
       @include media(small) { width: 100px; }
-    } 
+    }
   }
 }
 
@@ -61,4 +61,124 @@ a { text-decoration: none; }
   width: 88.5%;
   max-width: 1400px;
   margin: 0 auto;
+}
+
+.content-page {
+
+  .sub-section {
+    &:nth-of-type(2n)  {
+      background: $color_bg-medium;
+
+      .columned { flex-direction: row-reverse; }
+    }
+
+    &:first-of-type { z-index: 2; }
+
+    &:nth-of-type(2) {
+      &:before {
+        @extend ._pseudo;
+        @extend ._grid-bg;
+
+        top: -30%;
+        left: 0;
+
+        width: 31%;
+        height: 36%;
+      }
+
+      p:nth-of-type(2) { padding-top: 0; }
+    }
+
+    &:nth-of-type(3) {
+      p:last-of-type { padding-top: 0; }
+
+      &:before {
+        @extend ._pseudo;
+        @extend ._grid-bg;
+
+        right: 0;
+        top: -10%;
+
+        width: 50%;
+        height: 50%;
+      }
+
+      &:after {
+        @extend ._pseudo;
+        @extend ._partial-bg;
+
+        height: 3%;
+      }
+    }
+  }
+
+  .columned {
+    display: flex;
+
+    padding: 25px 0;
+
+    @include media(small) { display: block; }
+  }
+
+  p {
+    margin: auto;
+    padding: 65px 75px;
+    vertical-align: middle;
+
+    font-size: $font_size-medium;
+    line-height: calc(#{$font_size-medium} + 12px);
+
+    @include media(small) { padding: 50px 0; }
+
+    a {
+      color: $color_font-dark;
+
+      background: $color_palette-yellow--light;
+      transition: background .18s;
+
+      &:hover {
+        background: $color_palette-yellow;
+        transition: background .18s;
+      }
+    }
+  }
+
+  .box-link {
+    display: block;
+
+    height: 100%;
+
+    @include media(small) { display: none; }
+
+    span {
+      left: 0;
+      transition: left .2s;
+    }
+
+    &:hover {
+      span {
+        left: 5px;
+        transition: left .2s;
+      }
+    }
+  }
+
+  .box-content {
+    @extend ._vertical-center;
+
+    width: 66.66%;
+    margin: 0 auto;
+
+    color: $color_font-dark;
+
+    & > * { display: block; }
+
+    span.large {
+      font-size: $font_size-large;
+      font-family: $font_family-secondary;
+    }
+
+    span.small { font-size: $font_size-medium; }
+  }
+
 }
