Add DataCommon Community Profile links to About page

--- a/src/sass/about/About.scss
+++ b/src/sass/about/About.scss
@@ -2,4 +2,14 @@
 
   h1 { margin: .75em auto .65em; }
 
+  .profile-link a {
+    background: none;
+
+    &.orange:hover { background: $color_palette-orange; }
+    &.blue:hover { color: mix(black, $color_palette-blue, 60); background: $color_palette-blue; }
+    &.skyblue:hover { background: $color_palette-skyblue; }
+    &.green:hover { background: $color_palette-green; }
+    &.yellow:hover { background: $color_palette-yellow; }
+  }
+
 }
