--- a/src/sass/home/Member.scss
+++ b/src/sass/home/Member.scss
@@ -5,7 +5,6 @@
   font-size: 0.8rem;
   text-align: center;
 
-
   .image-container {
     width: 8rem;
 
@@ -80,12 +79,9 @@
 
       background-color: white;
     }
-
   }
 
-  .name, .title {
-    font-size: $font_size-small;
-  }
+  .name, .title { font-size: $font_size-small; }
 
   .name {
     margin-top: $font_size-small / 2;
